<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_request"
            android:icon="@drawable/ic_request"
            android:title="@string/drawer_request_submit" />

        <item
            android:id="@+id/drawer_privacypolicy"
            android:icon="@drawable/ic_privacypolicy"
            android:title="@string/drawer_privacy_policy"/>
        <item
            android:id="@+id/drawer_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/drawer_rate_app" />
        <item
            android:id="@+id/drawer_share"
            android:icon="@drawable/ic_new_share"
            android:title="@string/drawer_share_app" />
        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_about"
            android:title="@string/drawer_about_app" />
        <item
            android:id="@+id/remove_ads"
            android:icon="@drawable/ic_drawer_remove"
            android:title="@string/drawer_remove_ads"
            android:visible="false" />
        <item
            android:id="@+id/drawer_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/drawer_exit_app" />




    </group>



</menu>
