<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white_Overly"
        android:layout_height="match_parent">



        <androidx.cardview.widget.CardView
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="false"
                android:background="#ffffff"
                android:elevation="5dp"
                android:paddingBottom="24dp">


                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="65dp"
                    android:text="@string/app_name"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_profile_short_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="Sakarya Üniversitesi Duvar Kağıdı Uygulaması"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/layoutbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_short_bio"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/Rateapp"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:background="@drawable/border_button"
                        android:text="BİZİ OYLAYIN"
                        android:textColor="@color/navy_blue_type1" />


                    <Button
                        android:id="@+id/support"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:background="@color/navy_blue_type1"
                        android:text="DESTEK"
                        android:textColor="@color/white" />


                </LinearLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_Overly"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/facebook" />

                <ImageView
                    android:id="@+id/instagram"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_toRightOf="@+id/facebook"
                    android:src="@drawable/instagram"/>

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_toRightOf="@+id/instagram"
                    android:src="@drawable/twitter" />

                <ImageView
                    android:id="@+id/website"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/twitter"
                    android:layout_toRightOf="@+id/twitter"
                    android:src="@drawable/website" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/appversionlayout"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        >

                        <TextView
                            android:id="@+id/titleapp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Version"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="@color/navy_blue_type1"
                            android:clickable="false" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/titleapp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/app_version"
                            android:textSize="12dp" />
                    </RelativeLayout>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/tipslayout"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/copyrightlayout"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/copyright"
                        android:src="@drawable/ic_other_copyright"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@drawable/ic_other_copyright" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/copyright">

                        <TextView
                            android:id="@+id/titlecopyright"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Copyright"
                            android:textColor="@color/navy_blue_type1"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/titlecopyright"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/app_copyright"
                            android:textSize="12dp" />
                    </RelativeLayout>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/rateuslayout"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/rateus"
                        android:layout_width="50dp"
                        android:src="@drawable/ic_other_rate"
                        android:layout_height="50dp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/rateus">

                        <TextView
                            android:id="@+id/titlerateus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/title_app_rate"
                            android:textSize="16dp"
                            android:textColor="@color/navy_blue_type1"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/titlerateus"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/rate_summary"
                            android:textSize="12dp" />
                    </RelativeLayout>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dip"
                android:id="@+id/privacylayout"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/privacy"
                        android:layout_width="50dp"
                        android:src="@drawable/ic_other_privacy"
                        android:layout_height="50dp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/privacy">

                        <TextView
                            android:id="@+id/titleprivacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Gizlilik Politikası"
                            android:textColor="@color/navy_blue_type1"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/titleprivacy"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/privacy_summary"
                            android:textSize="12dp" />
                    </RelativeLayout>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cover_image" />

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="115dp"
            android:background="@drawable/profile_circular_border_imageview"
            android:elevation="3dp"
            android:padding="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>